test/basic/subview_validshape_partial_parent_requires_explicit.pto
// RUN: ptoas %s 2>&1 1>/dev/null | FileCheck %s

module {
  func.func @subview_implicit_valid_reject_partial_parent(
      %dst: memref<2x2xf32, #pto.address_space<gm>>) {
    %c2 = arith.constant 2 : index
    %tile = pto.alloc_tile : !pto.tile_buf<loc=vec, dtype=f32, rows=4, cols=4, v_row=3, v_col=3, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    %s = pto.subview %tile[%c2, %c2] sizes [2, 2] :
      !pto.tile_buf<loc=vec, dtype=f32, rows=4, cols=4, v_row=3, v_col=3, blayout=row_major, slayout=none_box, fractal=512, pad=0>
    pto.tstore ins(%s : !pto.tile_buf<loc=vec, dtype=f32, rows=4, cols=4, v_row=2, v_col=2, blayout=row_major, slayout=none_box, fractal=512, pad=0>)
              outs(%dst : memref<2x2xf32, #pto.address_space<gm>>)
    return
  }
}

// CHECK: error: 'pto.subview' op omitting valid[...] would exceed source valid_shape[row]; provide explicit valid
